--- a/nginx.conf
+++ b/nginx.conf
@@ -16,3 +16,8 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 }
+
+    location /images/ {
+        alias /usr/share/nginx/html/images/;
+    }
+
