add homepage in json file

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "deepai",
+  "homepage": "https://hisham-m0hamed.github.io/El-Captain-frontend/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
