--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.3",
+    "react-slick": "^0.31.0",
+    "slick-carousel": "^1.8.1",
     "swiper": "^12.0.2",
     "tailwindcss": "^4.1.13"
   },
@@ -39,4 +41,3 @@
     "vite": "npm:rolldown-vite@7.1.12"
   }
 }
-
